--- a/src/Blazored.Toast/BlazoredToasts.razor
+++ b/src/Blazored.Toast/BlazoredToasts.razor
@@ -1,10 +1,70 @@
-﻿@if (ToastList.Any())
+﻿@if (TopLeftList.Any())
 {
-    <div class="blazored-toast-container @PositionClass">
+    <div class="fixed left-1 top-1 grid gap-1">
         <CascadingValue Value=this>
-            @foreach (var toast in ToastList.OrderBy(x=>x.TimeStamp))
+            @foreach (var toast in TopLeftList.OrderBy(x => x.TimeStamp))
             {
-                <BlazoredToast @key="toast" ToastSettings="toast.ToastSettings" ToastId="toast.Id" Timeout="Timeout"/>
+                <BlazoredToast @key="toast" ToastOptions="toast.ToastOptions" ToastId="toast.Id" />
+            }
+        </CascadingValue>
+    </div>
+}
+
+@if (TopCenterList.Any())
+{
+    <div class="fixed top-1 left-1/2 transform -translate-x-1/2 grid gap-1">
+        <CascadingValue Value=this>
+            @foreach (var toast in TopCenterList.OrderBy(x => x.TimeStamp))
+            {
+                <BlazoredToast @key="toast" ToastOptions="toast.ToastOptions" ToastId="toast.Id"/>
+            }
+        </CascadingValue>
+    </div>
+}
+
+@if (TopRightList.Any())
+{
+    <div class="fixed right-1 top-1 grid gap-1">
+        <CascadingValue Value=this>
+            @foreach (var toast in TopRightList.OrderBy(x => x.TimeStamp))
+            {
+                <BlazoredToast @key="toast" ToastOptions="toast.ToastOptions" ToastId="toast.Id" />
+            }
+        </CascadingValue>
+    </div>
+}
+
+@if (BottomLeftList.Any())
+{
+    <div class="fixed left-1 bottom-1 grid gap-1">
+        <CascadingValue Value=this>
+            @foreach (var toast in BottomLeftList.OrderBy(x => x.TimeStamp))
+            {
+                <BlazoredToast @key="toast" ToastOptions="toast.ToastOptions" ToastId="toast.Id"/>
+            }
+        </CascadingValue>
+    </div>
+}
+
+@if (BottomCenterList.Any())
+{
+    <div class="fixed bottom-1 left-1/2 transform  -translate-x-1/2 grid gap-1">
+        <CascadingValue Value=this>
+            @foreach (var toast in BottomCenterList.OrderBy(x => x.TimeStamp))
+            {
+                <BlazoredToast @key="toast" ToastOptions="toast.ToastOptions" ToastId="toast.Id"/>
+            }
+        </CascadingValue>
+    </div>
+}
+
+@if (BottomRightList.Any())
+{
+    <div class="fixed right-1 bottom-1 grid gap-1">
+        <CascadingValue Value=this>
+            @foreach (var toast in BottomRightList.OrderBy(x => x.TimeStamp))
+            {
+                <BlazoredToast @key="toast" ToastOptions="toast.ToastOptions" ToastId="toast.Id"/>
             }
         </CascadingValue>
     </div>
