Tailwind build from within Toast project

--- a/samples/BlazorServer/Pages/_Host.cshtml
+++ b/samples/BlazorServer/Pages/_Host.cshtml
@@ -7,9 +7,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blazored Toast (Server)</title>
+    <title>Blazor Tailwind Toast (Server)</title>
     <base href="~/" />
     <link href="https://unpkg.com/tailwindcss@@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link href="_content/Blazored.Toast/css/app.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
