Ready for nuget package

--- a/samples/BlazorServer/_Imports.razor
+++ b/samples/BlazorServer/_Imports.razor
@@ -6,6 +6,6 @@
 
 @using BlazorServer.Shared
 
-@using Blazored.Toast
-@using Blazored.Toast.Services
-@using Blazored.Toast.Enums
+@using BlazorTailwindToast
+@using BlazorTailwindToast.Services
+@using BlazorTailwindToast.Enums
