--- a/samples/BlazorWebAssembly/_Imports.razor
+++ b/samples/BlazorWebAssembly/_Imports.razor
@@ -9,6 +9,6 @@
 @using BlazorWebAssembly
 @using BlazorWebAssembly.Shared
 
-@using Blazored.Toast
-@using Blazored.Toast.Services
-@using Blazored.Toast.Enums
+@using BlazorTailwindToast
+@using BlazorTailwindToast.Services
+@using BlazorTailwindToast.Enums
