--- a/samples/BlazorServer/Pages/_Host.cshtml
+++ b/samples/BlazorServer/Pages/_Host.cshtml
@@ -10,7 +10,7 @@
     <title>Blazor Tailwind Toast (Server)</title>
     <base href="~/" />
     <link href="https://unpkg.com/tailwindcss@@^2/dist/tailwind.min.css" rel="stylesheet">
-    <link href="_content/Blazored.Toast/css/app.min.css" rel="stylesheet" />
+    <link href="_content/BlazorTailwindToast/css/app.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
