--- a/samples/BlazorWebAssembly/Shared/MainLayout.razor
+++ b/samples/BlazorWebAssembly/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 @using BlazorTailwindToast.Services
 
-<BlazoredToasts/>
+<Toaster/>
 
 <div class="min-h-screen bg-gray-200 p-6 flex flex-col justify-center">
     @Body
